[package]
name = "thud"
version = "0.1.2"
authors = ["Laura Demkowicz-Duffy <edward70891@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "A library for the board game Thud as seen in the Discworld series of books"
homepage = "https://github.com/Laura7089/thud"
repository = "https://github.com/Laura7089/thud.git"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
libc = { version = "0.2.68", optional = true }

[dev-dependencies]
test-case = "1.0.0"

[features]
serialize = ["serde"]
ffi = ["libc"]
