[package]
name = "thud"
version = "0.1.5"
authors = ["Laura Demkowicz-Duffy <edward70891@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "A library for the board game Thud as seen in the Discworld series of books"
homepage = "https://github.com/Laura7089/thud"
repository = "https://github.com/Laura7089/thud.git"
readme = "README.md"

[features]
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
test-case = "1.0.0"
